--- a/T24 Webpage/About/kevin.html
+++ b/T24 Webpage/About/kevin.html
@@ -31,7 +31,7 @@
         </nav>
         </div>
         <main>
-          <img class="kevin" src="img/kevin.jpg" width=175px alt="Kevin McInerney" align="left" border= 2px solid #555;>
+          <img class="portrait" src="img/kevin.jpg" width=175px alt="Kevin McInerney" align="left">
              <h1>Kevin McInerney</h1>
              <p>
                I am currently getting my BS in computer engineering at Florida Atlantic University. Some of my skills are C/C++, HTML/CSS, python, Assembly, VHDL and Solidworks. I enjoy computer engineering because it is focused on the integration of hardware and software such as programming FPGA's and microcontrollers which is what I like to do. In my free time my hobbies consist of playing video games, watching shows and movies, and spending time with family and friends.  
