--- a/T24 Webpage/About/thomasm.html
+++ b/T24 Webpage/About/thomasm.html
@@ -31,7 +31,12 @@
         </nav>
         </div>
         <main>
-            Thomas M
+			<img src="img/ThomasMPortrait.jpg", alt="Thomas Moraes" height="300px" class="portrait" align="left">
+			<h1>Thomas Moraes</h1>
+            <p>
+				Hello There! My name is Thomas Moraes, and I'm a starting senior student majoring in Computer Science. I have done well in all of my courses so far, but I haven't explored much apart from the FAU courses.
+				I am proficient in C, C++, some JavaScript, and Assembly. Working with a team is new to me, but I plan to be a dependable addition for whatever we plan throughout the semester.
+			</p>
         </main>
     </body>
 </html>
