--- a/T24 Webpage/About/conor.html
+++ b/T24 Webpage/About/conor.html
@@ -31,7 +31,13 @@
         </nav>
         </div>
         <main>
-            Conor
+            <img class="portrait" src="img/conor.jpg" alt="Conor Coleman" align="left">
+            <h1>Conor Coleman</h1>
+                <p>
+                    Hi, I'm Conor. I am a computer programming/software engineering major with a good grasp of C and C++, along with data structures (such as stacks, lists, and trees) associated with them.
+                    I have experience in HTML, CSS, and Javascript, although much lighter experience compared to C and C++. I can use MySQL workbench, and can code in SQL.
+                    In my free time I enjoy playing basketball, among other sports, and spending time with friends.
+                </p>
         </main>
     </body>
 </html>
