--- a/T24 Webpage/About/conor.html
+++ b/T24 Webpage/About/conor.html
@@ -31,7 +31,7 @@
         </nav>
         </div>
         <main>
-            <img class="portrait" src="img/conor.jpg" alt="Conor Coleman" align="left">
+            <img class="portrait" src="img/conor.jpg" alt="Conor Coleman" align="left" width=175px>
             <h1>Conor Coleman</h1>
                 <p>
                     Hi, I'm Conor. I am a computer programming/software engineering major with a good grasp of C and C++, along with data structures (such as stacks, lists, and trees) associated with them.
