--- a/T24 Webpage/About/tommyg.html
+++ b/T24 Webpage/About/tommyg.html
@@ -31,7 +31,10 @@
         </nav>
         </div>
         <main>
-            Tommy G
+          <img class="landscape" src="img/ThomasG.jpg" width=175px alt="Kevin McInerney" align="left"
+            <h1>Tommy G</h1>
+            <p>I am currently studying CS at FAU and plan to graduate within the next year, making me a senior. I have skills in C/C++ and python, also of course some HTML. I've had a passion for computers since my dad would play warcraft with me on his laptop when I was a child. My passions include videogames, music, and engineering. </p>
+
         </main>
     </body>
 </html>
